[package]
name = "bevy_kira_basic_spatial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8", default-features = false, features = [
    "ktx2", 
    "dds", 
    "zstd", 
    "animation", 
    "bevy_asset", 
    "bevy_gilrs", 
    "bevy_gltf", 
    "bevy_scene", 
    "bevy_winit", 
    "render", 
    "png",
    "hdr",
    "vorbis",
    "x11",
    "filesystem_watcher"
] }
bevy_basic_camera = { git = "https://github.com/DGriffin91/bevy_basic_camera" }
bevy_kira_audio = { git  = "https://github.com/NiklasEi/bevy_kira_audio", rev = "3b457c990e5aa9b3c09ea55c0aa4cdc1a4df9231" }

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
